# number-extracter

./: .gitignore  README.md  index.html  input.css  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
src/: App.vue  main.ts  models.ts  utilities.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: excel.rs  extract.rs  lib.rs  main.rs
src/assets/: main.css
src/components/: extract-result.vue  img-list.vue  img-rect.vue
