[package]
name = "number-extracter"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "number_extracter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1.5.5"

image = { version = "0.25.5", default-features = false, features = ["jpeg"] }
ocrs = "0.9.0"
rten = "0.13"
rust_xlsxwriter = "0.82.0"
lazy_static = "1.5.0"
rayon = "1.10.0"
tauri-plugin-dialog = "2"
